[package]
name = "selfstack"
version = "0.3.0"
authors = ["Eric Culp <eculperic@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A macro to generate self-referential structs"
repository = "https://github.com/singron/selfstack"
readme = "README.md"
keywords = ["self", "reference"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15", features = ["full", "extra-traits"]}
quote = "0.6"
proc-macro2 = "0.4"
